--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
  <head>
-  <title>Мой проект</title>
+  <title>РњРѕР№ РїСЂРѕРµРєС‚ </title>
  </head>
  <body>
-  <h1>Тут будет мой веб проект</h1>
+  <h1>РўСѓС‚ Р±СѓРґРµС‚ РјРѕР№ РІРµР± РїСЂРѕРµРєС‚ </h1>
  </body>
 </html>
