--- a/main.html
+++ b/main.html
@@ -6,16 +6,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Dobra`s kitchen</title>
+    <img class="shadow" src="pictures/Dobronet.jpg"  alt="logo">
 </head>
 <body>
 
 <header>
-    <h3>Особенности готовки в общаге от Dobra</h3>
+    <h3>Dobra food delivery</h3>
 </header>
 
 <article>
     <h5>Доставим быстро и куда угодно</h5>
-    <p>Вы только заказали, а мы уже тут</p>
+    <p class="p-1">Вы только заказали, а мы уже тут</p>
 </article>
 
 <p>Цитата, понимание которой важно при готовке: <q>Кулинария — <i><b>подарок</b></i> Богов. Специи же — подарок <strong>дьявола</strong>.<br>
