--- a/Pages/dishes.html
+++ b/Pages/dishes.html
@@ -43,8 +43,8 @@
 
 
 
-<div class="row">
-    <div class="column">
+<div class="wrapper">
+    <div>
         <h5>Ингредиенты блюда "Рагу из курицы"</h5>
         <img src="../pictures/ragu_s_chicken.jpg" width="50%" height="50%" alt="Ragu">
         <ul>
@@ -53,7 +53,7 @@
         <nav><a href="#t1" id="d1">Заказать</a></nav>
         <script src="../JS/noDish.js"></script>
     </div>
-    <div class="column">
+    <div>
         <h5>Заказать блюдо "Пеперонни"</h5>
         <img src="../pictures/peperoni.jpg" width="40%" height="40%" alt="pEPERONI">
         <ul>
@@ -71,7 +71,9 @@
         email: 284469@niuitmo.ru<br>
         phone: +7-905-***-**-**<br>
         telegram: @Dobranety<br>
-        <nav><a href="https://vk.com/kev_0011">VK</a></nav></aside>
+        <nav><a href="https://vk.com/kev_0011">VK</a></nav>
+        <script>date()</script></aside>
+
 </footer>
 </body>
 </html>
