--- a/Pages/parseLaceholder.html
+++ b/Pages/parseLaceholder.html
@@ -54,7 +54,9 @@
         email: 284469@niuitmo.ru<br>
         phone: +7-905-***-**-**<br>
         telegram: @Dobranety<br>
-        <nav><a href="https://vk.com/kev_0011">VK</a></nav></aside>
+        <nav><a href="https://vk.com/kev_0011">VK</a></nav>
+        <script>date()</script></aside>
+
 </footer>
 </body>
 </html>
