--- a/Pages/main.html
+++ b/Pages/main.html
@@ -44,7 +44,8 @@
         <div class="top-over-menu-logo">
         </div>
     </div>
-    </div><div class="main-menu">
+    </div>
+    <div class="main-menu">
         <ul>
             <li><a href="main.html" class="button1">Главная</a></li>
             <div class="dropdown">
