--- a/Pages/reviews.html
+++ b/Pages/reviews.html
@@ -2,16 +2,14 @@
 <html lang="ru">
 <link rel="stylesheet" type="text/css" href="../CSS/style.css">
 
-
-
 <head role="banner">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dobra`s kitchen</title>
     <img class="shadow" src="../pictures/Dobronet.jpg" alt="logo">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-
+    <script src="../bootstrap-5.1.3-dist/js/bootstrap.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 <body>
 
@@ -40,11 +38,17 @@
         <li><a href="#contact" class="button1">Контакты</a></li>
     </ul>
 </div>
+
+
+
+
 <div>
     <h1>Отзывы нашего магазина:</h1>
     <p class="block1">Еда была очень вкусной, всем советую</p>
     <div id="comments">
     </div>
+
+
 
     <div>
         <form >
