--- a/Pages/main.html
+++ b/Pages/main.html
@@ -45,30 +45,42 @@
         </div>
     </div>
     </div>
-    <div class="main-menu">
-        <ul>
-            <li><a href="main.html" class="button1">Главная</a></li>
-            <div class="dropdown">
-                <button class="dropbtn">Магазин</button>
-                <div class="dropdown-content">
-                    <a href="https://www.google.com/search?client=opera-gx&q=Московский+пр-т.%2C+73%2C+Санкт-Петербург%2C+196084&sourceid=opera&ie=UTF-8&oe=UTF-8">Московский пр-т., 73, Санкт-Петербург, 196084   </a>
-                    <a href="https://www.google.com/maps?client=opera-gx&q=Бронницкая+ул.,+44,+Санкт-Петербург,+190013&oe=UTF-8&um=1&ie=UTF-8&sa=X&ved=2ahUKEwiHjMyatOb0AhVisYsKHSj-CWMQ_AUoAXoECAEQAw">Бронницкая ул., 44, Санкт-Петербург, 190013</a>
-                    <a href="https://www.google.com/maps?client=opera-gx&q=Рыбинская+улица,+1литЗ,+1+этаж,+Санкт-Петербург,+190013&oe=UTF-8&um=1&ie=UTF-8&sa=X&ved=2ahUKEwjvjNuOtOb0AhWCuosKHUyhD7gQ_AUoAXoECAIQAw">Рыбинская улица, 1литЗ, 1 этаж, Санкт-Петербург, 190013</a>
-                </div>
-            </div>
-            <li><a href="dishes.html" class="button1">Блюда</a></li>
-            <div class="dropdown">
-                <button class="dropbtn">Отзывы</button>
-                <div class="dropdown-content">
-                    <a href="reviews.html">Отзывы на сайте   </a>
-                    <a href="parseLaceholder.html">Отзывы со сторонних сайтов</a></div>
-            </div>
-            <li><a href="#contact" class="button1">Контакты</a></li>
-        </ul>
+    <div>
+
     </div>
     <main role="main">
 
+        <nav id="nav" role="navigation"> <a href="#nav" title="Show navigation">Show navigation</a> <a href="#" title="Hide navigation">Hide navigation</a>
+            <ul>
+                <li><a href="main.html" >Главная</a></li>
 
+                   <li>
+                       <a href=""><span>Магазин</span></a>
+                        <ul>
+                            <a href="https://www.google.com/search?client=opera-gx&q=Московский+пр-т.%2C+73%2C+Санкт-Петербург%2C+196084&sourceid=opera&ie=UTF-8&oe=UTF-8">Московский пр-т., 73, Санкт-Петербург, 196084   </a>
+                            <a href="https://www.google.com/maps?client=opera-gx&q=Бронницкая+ул.,+44,+Санкт-Петербург,+190013&oe=UTF-8&um=1&ie=UTF-8&sa=X&ved=2ahUKEwiHjMyatOb0AhVisYsKHSj-CWMQ_AUoAXoECAEQAw">Бронницкая ул., 44, Санкт-Петербург, 190013</a>
+                            <a href="https://www.google.com/maps?client=opera-gx&q=Рыбинская+улица,+1литЗ,+1+этаж,+Санкт-Петербург,+190013&oe=UTF-8&um=1&ie=UTF-8&sa=X&ved=2ahUKEwjvjNuOtOb0AhWCuosKHUyhD7gQ_AUoAXoECAIQAw">Рыбинская улица, 1литЗ, 1 этаж, Санкт-Петербург, 190013</a>
+
+                        </ul>
+
+                   </li>
+
+                <li><a href="dishes.html">Блюда</a></li>
+
+                    <li>
+                        <a href=""><span>Отзывы</span></a>
+                        <ul>
+                            <li><a href="reviews.html">Отзывы на сайте   </a></li>
+                            <li><a href="parseLaceholder.html">Отзывы со сторонних сайтов</a></div></li>
+                        </ul>
+
+
+
+                    </li>
+
+                <li><a href="#contact">Контакты</a></li>
+            </ul>
+        </nav>
 
 
 <p>Цитата, понимание которой важно при готовке: <q>Кулинария — <i><b>подарок</b></i> Богов. Специи же — подарок <strong>дьявола</strong>.<br>
